<resources>
    <string name="app_name">Monthly Ahban</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_khutba_details">KhutbaDetailsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="txt_heading">Monthly Ahban\n\nby\n\nIshayat Department</string>
    <string name="txt_author">Majlis Khuddamul Ahmadiyya\nBangladesh.</string>

    <string name="menu_khutba">Khutba</string>
    <string name="menu_archives">Ahban</string>
    <string name="menu_services">Services</string>
    <string name="menu_account">Account</string>
    <string name="current_version">Version 1.0</string>

    <string name="to_mail_address">To Mail Address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_mail">Send Mail</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_group_sms">Sending Group SMS</string>

    <string name="to_message_address">To Number</string>
    <string name="send_message">Send Message</string>

    <string name="to_message_sender">Your Number</string>

</resources>
