<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity.MailSendActivity">

        <LinearLayout
            android:id="@+id/llLabel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/receiverName"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="To : "
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etToMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/to_message_address"
                android:inputType="number" />

        </LinearLayout>

        <!--<EditText
            android:id="@+id/etToMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/to_mail_address"
            android:inputType="textEmailAddress" />-->

        <EditText
            android:id="@+id/etSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llLabel1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/subject"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etSubject"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_compose_text"
            android:padding="@dimen/cardview_margin_4"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:paddingStart="@dimen/size2"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:lines="7" />

        <Button
            android:id="@+id/btnSendMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etMessage"
            android:paddingStart="@dimen/size5"
            android:paddingEnd="@dimen/size5"
            android:drawablePadding="@dimen/size5"
            android:layout_centerHorizontal="true"
            android:drawableStart="@android:drawable/ic_menu_add"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:background="@drawable/button_selector"
            android:textColor="@color/off_white"
            android:onClick="btnSendMailClick"
            android:text="@string/send_mail" />

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:autoLink="web"
            android:gravity="center"
            android:text="www.mkabd.org"
            android:textSize="26sp"
            android:textStyle="bold"
            android:visibility="visible" />-->
    </RelativeLayout>

</ScrollView>
