<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity.MessageSendActivity">

        <TextView
            android:id="@+id/receiverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llLabel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/receiverName"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="To : "
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etToMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/to_message_address"
                android:inputType="number"
                android:maxLength="11" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llLabel1">

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_compose_text"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="top"
                android:focusable="true"
                android:padding="@dimen/size4"
                android:hint="@string/message"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="7"
                android:maxLength="200" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llLabel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlMessage"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="From : "
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSenderNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/to_message_sender"
                android:inputType="number"
                android:maxLength="11" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/size5"
            android:layout_centerHorizontal="true"
            android:paddingStart="@dimen/size5"
            android:textAllCaps="false"
            android:textColor="@color/collapse_color"
            android:paddingEnd="@dimen/size15"
            android:drawableStart="@android:drawable/ic_menu_send"
            android:layout_below="@+id/llLabel2"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_selector"
            android:text="@string/send_message" />
        <!--android:onClick="btnSendMailClick"-->

    </RelativeLayout>

</ScrollView>